# JobApplicationAutomator

./: .gitignore  DEPLOYMENT.md  DESIGN.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  auth.py  deps.py  health.py  jobs.py  linkedin.py  portals.py  users.py
backend/app/core/: config.py  database.py  logging.py  middleware.py  security.py
backend/app/models/: api_token.py  audit_log.py  base.py  job.py  linkedin_post.py  portal.py  resume.py  user.py
backend/app/schemas/: auth.py  common.py  job.py  linkedin_post.py  portal.py  user.py
backend/app/services/: background_tasks.py  email_service.py  encryption_service.py  groq_matching_service.py  job_fetch_service.py  linkedin_post_service.py  matching_service.py  portal_service.py  resume_service.py  storage_service.py  user_service.py
backend/app/workers/: celery_app.py  tasks.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: a5c678577bc5_initial_schema.py
backend/scripts/: rotate_master_key.py
backend/tests/: conftest.py  test_auth.py  test_encryption.py
extension/: background.js  content.js  manifest.json  popup.html  popup.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AppShell.tsx  FilterBar.tsx  ScoreBadge.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: JobListPage.tsx  JobSourcesPage.tsx  LinkedInPostsPage.tsx  LoginPage.tsx
frontend/src/store/: authStore.ts
